--- a/app/src/main/res/layout/activity_job_application.xml
+++ b/app/src/main/res/layout/activity_job_application.xml
@@ -20,7 +20,7 @@
             tools:ignore="MissingConstraints">
 
             <TextView
-                android:id="@+id/ApplicationTitle"
+                android:id="@+id/applicationTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
