--- a/app/src/main/res/layout/activity_employee_applications.xml
+++ b/app/src/main/res/layout/activity_employee_applications.xml
@@ -17,42 +17,19 @@
             android:layout_marginHorizontal="15dp"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/employeeTopLayout"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/availableJobsTitle"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="24sp"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal"
-                tools:ignore="MissingConstraints">
-
-                <TextView
-                    android:id="@+id/availableJobsTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="My Applications"
-                    android:textColor="#2196F3"
-                    android:textSize="30sp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toTopOf="@+id/employeeTopLayout"
-                    app:layout_constraintEnd_toStartOf="@+id/searchJobsButton"
-                    app:layout_constraintStart_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="parent" />
-
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
-
-                <ImageButton
-                    android:id="@+id/searchJobsButton"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:background="#00FFFFFF"
-                    android:contentDescription="Search job Postings"
-                    app:srcCompat="@android:drawable/ic_menu_search"
-                    app:tint="#494545" />
-            </LinearLayout>
+                android:text="My Applications"
+                android:textColor="#2196F3"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/employeeTopLayout"
+                app:layout_constraintEnd_toStartOf="@+id/searchJobsButton"
+                app:layout_constraintStart_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="parent" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/employeeRecyclerView"
@@ -63,13 +40,13 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/employeeTopLayout"
                 tools:itemCount="3"
-                tools:listitem="@layout/job_item_view" />
+                tools:listitem="@layout/job_application_item_view" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_gravity="end"
+                android:layout_gravity="center"
                 android:layout_marginTop="16dp">
 
                 <Button
