--- a/app/src/main/res/layout/activity_applicant_details_view.xml
+++ b/app/src/main/res/layout/activity_applicant_details_view.xml
@@ -110,12 +110,12 @@
                 android:layout_marginBottom="8dp" />
         </LinearLayout>
 
-        <!-- Submit Button -->
+        <!-- Hire Button -->
         <Button
-            android:id="@+id/submitButton"
+            android:id="@+id/hireButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Submit"
+            android:text="Hire"
             android:visibility="gone"
             android:layout_marginBottom="16dp" />
 
